# url_shortener_slicy

./: .gitignore  config.py  docker-compose.yml  manage.py  pyproject.toml
app/: __init__.py
app/links/: __init__.py  errors.py  models.py  serializers.py  services.py  views.py
app/users/: __init__.py  api.py  errors.py  models.py  serializers.py  views.py
migrations/versions/: 00815b6b7177_edited_fields_in_the_link_model.py  35861cd259a3_initial_migration.py  8a8852dc1ced_added_a_new_method_for_link_model.py  e3dd092af8db_added_blacklisttoken_model.py
